--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity
             android:name="pl.eiti.cociekawego.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,10 +32,12 @@
         </activity>
 
         <activity android:name=".MapsActivity"
-            android:label="Mapa"/>
+            android:label="Mapa"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".PreferenceActivity"
-            android:label="Preferences"/>
+            android:label="Preferences"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
