--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:label="Preferences"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".utils.FacilitiesDetails"
+            android:label="FacilitiesDetails"
+            android:screenOrientation="portrait"/>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyALSvOkyjg9m1P2uGpYJ9ynG8fnDUD6l8M" />
